--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,5 @@
 body{ 
-    background-image: url(/img/background.png);
+    background-image: url(https://desafiosdaeducacao.com.br/wp-content/uploads/2021/05/Univ._de_Vassouras.jpeg);
     background-size: cover;       
     color: rgb(228, 228, 228);
 margin: 0;
